se inicializa hoja de css style, y un menu de navegacion en index.html

--- a/PortafolioPrincipal/index.html
+++ b/PortafolioPrincipal/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../CSS/style.css">
     <title>portafolio</title>
 </head>
 <body>
-    
+<header>
+    <nav>
+        <a  href="../PortafolioPrincipal/index.html"><img width="2%" height="2%" src="../src/home.png" alt=""></a>
+        <a href="">PlaceHolder</a>
+        <a href="">PlaceHolder</a>
+        <a href="">PlaceHolder</a>
+        <a href="">PlaceHolder</a>
+    </nav> 
+</header>
+
+
 </body>
 </html>
