--- a/PortafolioPrincipal/index.html
+++ b/PortafolioPrincipal/index.html
@@ -9,14 +9,15 @@
 </head>
 <body>
 <header>
-    <nav>
-        <a  href="../PortafolioPrincipal/index.html"><img width="2%" height="2%" src="../src/home.png" alt=""></a>
+    <nav class="spaceu">
+        <a  href="../PortafolioPrincipal/index.html"><img width="25px" height="25px" src="../src/home.png" alt=""></a>
         <a href="">PlaceHolder</a>
         <a href="">PlaceHolder</a>
         <a href="">PlaceHolder</a>
         <a href="">PlaceHolder</a>
     </nav> 
 </header>
+<br>
 
 
 </body>
