--- a/PortafolioPrincipal/index.html
+++ b/PortafolioPrincipal/index.html
@@ -18,7 +18,28 @@
     </nav> 
 </header>
 <br>
+<br>
+<br>
+<br>
+<Marquee><h1>Steven Newton Portafolio Generation 2022</h1></Marquee>
 
+<br>
+<br>
+<div class ="container">
+    <div class="divimg"><img style=" border-radius:50%;" width="150px" height="150px" src="../src/FotoMia.png" alt=""></div>
+    <div class="divtexto">
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab impedit illum libero reprehenderit quibusdam blanditiis nostrum iste animi, ipsum officiis cumque nobis. Illum nobis adipisci debitis quam accusantium quaerat illo ullam, rem, qui sequi rerum, ab velit fuga quis vel?
+    </div>
+</div>
+<br>
+<br>
+<center>
+<h1 style="color:white;">Skills</h1>
+</center>
+<hr>
+<div class="divtexto" style="margin-right:200px">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure libero sed natus vero qui corrupti, tenetur neque, explicabo deserunt, nisi necessitatibus velit. Iusto, earum soluta impedit enim recusandae, aperiam necessitatibus veritatis ducimus dolores omnis nemo ex eveniet! Ab repellat quam expedita architecto facilis sed facere ad tempore obcaecati esse rem nihil neque doloremque sit blanditiis, dolorum adipisci assumenda quasi a beatae animi consectetur exercitationem! Dicta cumque, corporis sit velit numquam magnam expedita, in modi fuga debitis cum reprehenderit nobis officia obcaecati voluptas dignissimos aut odio ullam repellendus. Ipsum vel reiciendis rem obcaecati commodi facilis, corporis perspiciatis tempore laudantium earum beatae ullam numquam unde quos, amet laboriosam cum? Dignissimos enim cupiditate tenetur perspiciatis delectus necessitatibus exercitationem alias dolorum provident doloribus pariatur voluptatibus laudantium, officiis molestias earum dolorem voluptates sint numquam officia tempore. Suscipit accusamus earum eaque atque ducimus veniam? Odit quibusdam ratione totam expedita repellat. Obcaecati aut quaerat ipsum a, corrupti voluptatum ullam nesciunt rem ea nisi delectus repellat ipsam perspiciatis consequatur, reprehenderit beatae eligendi. Amet minima illo reiciendis eos quas ipsam harum adipisci dignissimos similique cumque fuga error quia odio, ex, non quos laborum possimus optio illum totam aut laudantium magni voluptas qui? Minima iusto vitae deleniti placeat veniam ab.    
+</div>
 
 </body>
 </html>
