agregue una pequeña animacion en la pagina index

--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -7,22 +7,25 @@
     <link rel="stylesheet" href="../CSS/style.css">
     <title>portafolio</title>
 </head>
+
 <body>
+
+<div class="splash fade zindex-tooltip" >
+    <br><br><br>
+ <h1>Steven Newton Portafolio 2022</h1>
+</div>
+
 <header>
-    <nav class="spaceu">
-        <a  href="../PortafolioPrincipal/index.html"><img width="25px" height="25px" src="../src/home.png" alt=""></a>
+    <nav class="spaceu fade2">
+        <a  href="index.html"><img width="25px" height="25px" src="../src/home.png" alt=""></a>
         <a href="">PlaceHolder</a>
         <a href="">PlaceHolder</a>
         <a href="">PlaceHolder</a>
         <a href="">PlaceHolder</a>
     </nav> 
 </header>
-<br>
-<br>
-<br>
-<br>
-<Marquee><h1>Steven Newton Portafolio Generation 2022</h1></Marquee>
 
+<br>
 <br>
 <br>
 <div class ="container">
