--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -1,48 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/style.css">
-    <title>portafolio</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../CSS/style.css">
+        <title>portafolio</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    </head>
+    <body style="background-color:#4a0023;">
+        
 
-<body>
+        <div class="splash fadeout" >
+            <br><br><br>
+            <h1>Steven Newton Portafolio 2022</h1>
+        </div>  
 
-<div class="splash fade zindex-tooltip" >
-    <br><br><br>
- <h1>Steven Newton Portafolio 2022</h1>
-</div>
+        <header class="fadein">
 
-<header>
-    <nav class="spaceu fade2">
-        <a  href="index.html"><img width="25px" height="25px" src="../src/home.png" alt=""></a>
-        <a href="">PlaceHolder</a>
-        <a href="">PlaceHolder</a>
-        <a href="">PlaceHolder</a>
-        <a href="">PlaceHolder</a>
-    </nav> 
-</header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light spaceu fade2">
+                <a class="navbar-brand" href="index.html"><img width="25px" height="25px" src="../src/home.png" alt=""></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                  <ul class="navbar-nav">
+                    <li class="nav-item ">
+                      <a class="nav-link" href="#">Placeholder</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Placeholder</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Placeholder</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link" href="#">Placeholder</a>
+                      </li>
+                  </ul>
+                </div>
+              </nav>
+        </header>
+        <section class="fadein" style="width:100%;">
 
-<br>
-<br>
-<br>
-<div class ="container">
-    <div class="divimg"><img style=" border-radius:50%;" width="150px" height="150px" src="../src/FotoMia.png" alt=""></div>
-    <div class="divtexto">
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab impedit illum libero reprehenderit quibusdam blanditiis nostrum iste animi, ipsum officiis cumque nobis. Illum nobis adipisci debitis quam accusantium quaerat illo ullam, rem, qui sequi rerum, ab velit fuga quis vel?
+        <br><br><br>
+            <marquee behavior="" direction=""><h1 style="color:white;">Version 0.3  <small style="color:red;">Beta</small></h1></marquee>
+        <div class="container " >
+            <div class="row">
+                <div class="col-md-2 "  >
+                    <img style=" border-radius:50%;" width=".9em" height=".9em" src="../src/FotoMia.png" alt="">
+                </div>
+            </div>
+            <div class="row">
+                <div class=" col-md-11 divtexto ">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ipsa a sequi, labore at possimus! Voluptatem, suscipit! Ex accusantium sint est id nemo cupiditate. Aperiam et beatae ducimus officiis corrupti sequi laborum, aliquam dolorum corporis praesentium? Officia cupiditate sit vel. Iure quasi esse itaque error maiores, corrupti atque similique suscipit alias distinctio, modi aliquid officiis corporis numquam voluptate quisquam eum.
+                </div>
+            </div>
+<!--             aqui van mis habilidades blandas y duras
+ -->            <div class="row justify-content-center ">
+                <div class="col-md-5 divtexto m-4 m-l-3 al" >
+                    <ul style="margin-left: 1.9em;">
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem, ipsum dolor.</li>
+                        <li>Lorem ipsum dolor sit.</li>
+                        <li>Lorem, ipsum dolor.</li>
+                        <li>Lorem, ipsum dolor.</li>
+                    </ul>
+                </div>
+                <div class="col-md-5 divtexto m-4 m-l-3 al" >
+                    <ul style="margin-left: 1.9em;">
+                        <li>Lorem, ipsum.</li>
+                        <li>Lorem, ipsum dolor.</li>
+                        <li>Lorem ipsum dolor sit.</li>
+                        <li>Lorem, ipsum dolor.</li>
+                        <li>Lorem, ipsum dolor.</li>
+                    </ul>
+                </div>
+        </div>
+
+        </section>
+
+<!--         aqui van proyectos que hagamos para el portafolio, las imagenes son temporales 
+ --><div id="carouselExampleControls" class="carousel slide fadein col-md-12" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block " width="90%" height="40%" src="../src/test1.png" alt="First slide">
     </div>
-</div>
+    <div class="carousel-item">
+      <img class="d-block " width="90%" height="40%" src="../src/test2.png" alt="Second slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 <br>
 <br>
-<center>
-<h1 style="color:white;">Skills</h1>
-</center>
-<hr>
-<div class="divtexto" style="margin-right:200px">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure libero sed natus vero qui corrupti, tenetur neque, explicabo deserunt, nisi necessitatibus velit. Iusto, earum soluta impedit enim recusandae, aperiam necessitatibus veritatis ducimus dolores omnis nemo ex eveniet! Ab repellat quam expedita architecto facilis sed facere ad tempore obcaecati esse rem nihil neque doloremque sit blanditiis, dolorum adipisci assumenda quasi a beatae animi consectetur exercitationem! Dicta cumque, corporis sit velit numquam magnam expedita, in modi fuga debitis cum reprehenderit nobis officia obcaecati voluptas dignissimos aut odio ullam repellendus. Ipsum vel reiciendis rem obcaecati commodi facilis, corporis perspiciatis tempore laudantium earum beatae ullam numquam unde quos, amet laboriosam cum? Dignissimos enim cupiditate tenetur perspiciatis delectus necessitatibus exercitationem alias dolorum provident doloribus pariatur voluptatibus laudantium, officiis molestias earum dolorem voluptates sint numquam officia tempore. Suscipit accusamus earum eaque atque ducimus veniam? Odit quibusdam ratione totam expedita repellat. Obcaecati aut quaerat ipsum a, corrupti voluptatum ullam nesciunt rem ea nisi delectus repellat ipsam perspiciatis consequatur, reprehenderit beatae eligendi. Amet minima illo reiciendis eos quas ipsam harum adipisci dignissimos similique cumque fuga error quia odio, ex, non quos laborum possimus optio illum totam aut laudantium magni voluptas qui? Minima iusto vitae deleniti placeat veniam ab.    
-</div>
+<br>
+<!--   el footer aun no se como lo quiero
+ -->    <footer style="background-color:white;   ">
 
-</body>
+            <a  href="https://github.com/Steven-Newton"><img width="25px" height="25px" src="../src/github.png" alt=""></a>
+
+            <a  href="https://www.linkedin.com/in/steven-newton-442242249/"><img width="25px" height="25px" src="../src/linkedin.png" alt=""></a>
+        derechos reservados 
+
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+    </body>
 </html>
